最小限のウェブ要素を作成

--- a/index.html
+++ b/index.html
@@ -2,6 +2,45 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        
+        <title>Whats up tak-min!!</title>
+        <link rel="Stylesheet" href="style.css">
     </head>
+    <body>
+        <header>
+            <div class="header">
+                <h1>Whats up tak-min!!</h1>
+            </div>
+        </header>
+        <div id="container">
+            <div id="icon">
+                <img src="myImage.jpg" alt="No Image" Width="300" height="480"> 
+            </div>
+            <div id="space">
+            </div>
+            <div id="name">
+                <hr class="default-hr">
+                <div class="FullName">
+                    <h1>江藤 拓海</h1>
+                </div>
+                <h5>tak-min</h5>
+                <hr class="default-hr">
+            </div>
+            <div id="context">
+                <p>
+                    初めまして！tak-minと申します。<br>
+                    明石高専に通ってる高専二年生です！<br>
+                    趣味はビジネスに関する情報を追ったり、プログラミングをすることです！<br>
+                    よろしくお願いします！<br><br>
+                </p>
+                <div class="link">
+                    <ul class="follow-me">
+                        <li><a href=https://x.com/Japans_Kosensei>ついったーのあかうんと</a></li>
+                        <li><a href=https://www.instagram.com/takminium>いんすたぐらむのあかうんと</li>
+                        <li><a href=https://github.com/Tak-min>ぎっとはぶのあかうんと</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <footer></footer>
+    </body>
 </html>
