--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="sidebar-inner">
                 <div class="profile-image">
                     <!-- LCP Image Optimization: Use WebP, specify dimensions, and set high fetch priority -->
-                    <img src="myImage.wp2" alt="Tak-min's profile picture" width="120" height="120" fetchpriority="high">
+                    <img src="myImage.webp" alt="Tak-min's profile picture" width="120" height="120" fetchpriority="high">
                 </div>
                 <h2>江藤 拓海</h2>
                 <p class="username">@tak-min</p>
