画像のパスを設定しなおし

--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
                 <h1 class="section-title">はじめまして！</h1>
                 <div class="card">
                     <p>
-                        tak-minと申します。明石高専の電気情報工学科に通う2年生です。<br>
-                        プログラミングとビジネスに強い関心があり、日々新しい技術や情報を追いかけています。<br>
+                        初めまして、tak-minです！明石高専の都市システム工学科に通う2年生です！<br>
+                        専攻は土木工学ですが、あまり専攻分野に興味がなく、プログラミングや回路などの電気情報分野でいろいろやってます！<br>
+                        プログラミングとビジネスに強い関心があり、日々新しい技術や情報を追いかけています！<br>
                         このサイトでは、私のスキルやこれまでに作ってきたものを紹介しています。
                     </p>
                     <p>どうぞ、ごゆっくりご覧ください！</p>
@@ -63,17 +64,22 @@
                     <div class="card skill-card">
                         <i class="fas fa-code skill-icon"></i>
                         <h3>Web開発</h3>
-                        <p>HTML, CSS, JavaScriptを中心に、モダンなウェブサイトやアプリケーションを構築できます。</p>
+                        <p>HTML, CSS, JavaScriptを中心に、モダンなウェブサイトやアプリケーションを構築できます！</p>
                     </div>
                     <div class="card skill-card">
                         <i class="fab fa-python skill-icon"></i>
                         <h3>Python</h3>
-                        <p>データ分析や機械学習、簡単なデスクトップアプリの開発経験があります。</p>
+                        <p>自動化ソフトウェアやスクレイピング、人工知能などの開発経験があります！</p>
                     </div>
                     <div class="card skill-card">
-                        <i class="fas fa-database skill-icon"></i>
-                        <h3>データベース</h3>
-                        <p>基本的なSQLの知識があり、簡単なデータベースの設計・操作が可能です。</p>
+                        <i class="fa-solid fa-lightbulb skill-icon"></i>
+                        <h3>組み込み</h3>
+                        <p>マイコンや回路の知識がある程度あり、はんだ付けでいろいろなものを作ったりできます！</p>
+                    </div>
+                    <div class="card skill-card">
+                        <i class="fa-brands fa-bluetooth skill-icon"></i>
+                        <h3>無線通信</h3>
+                        <p>BluetoothやWifiに関する知識があり、SnifferやJammerを作ったりしています！</p>
                     </div>
                 </div>
             </section>
@@ -84,19 +90,19 @@
                     <div class="card work-card">
                         <div class="work-image">
                             <!-- Lazy-loaded Image: Use WebP, specify dimensions, and lazy load -->
-                            <img src="work-placeholder.webp" alt="制作物の画像" width="280" height="180" loading="lazy" decoding="async">
+                            <img src="work-webpage.webp" alt="制作物の画像" width="280" height="180" loading="lazy" decoding="async">
                         </div>
                         <h3>ポートフォリオサイト</h3>
-                        <p>このウェブサイトです。モダンな技術とデザインを意識して作成しました。</p>
+                        <p>このウェブサイトです。モダンな技術とデザインを意識して作成しました！</p>
                         <a href="#" class="btn">詳しく見る</a>
                     </div>
                     <div class="card work-card">
                         <div class="work-image">
-                            <img src="work-placeholder.webp" alt="制作物の画像" width="280" height="180" loading="lazy" decoding="async">
+                            <img src="IMG_8842.webp".webp" alt="制作物の画像" width="280" height="180" loading="lazy" decoding="async">
                         </div>
-                        <h3>AIチャットボット</h3>
-                        <p>自然言語処理モデルを活用した、対話型のチャットアプリケーションです。</p>
-                        <a href="#" class="btn">詳しく見る</a>
+                        <h3>Bluetooth Jammer</h3>
+                        <p>Bluetoothでの接続を妨害するジャミングツールです！このほかにもWifiを妨害する機能や、Bluetoothでの通信を傍受する機能もあります！</p>
+                        <a href="" class="btn">詳しく見る</a>
                     </div>
                 </div>
             </section>
@@ -105,7 +111,7 @@
                 <h2 class="section-title">連絡先</h2>
                 <div class="card">
                     <p>ご意見、ご感想、お仕事の依頼など、お気軽にご連絡ください。</p>
-                    <a href="mailto:your-email@example.com" class="btn"><i class="fas fa-paper-plane"></i> メールを送る</a>
+                    <a href="mailto:taku810616@gmail.com" class="btn"><i class="fas fa-paper-plane"></i> メールを送る</a>
                 </div>
             </section>
 
