--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,14 +26,14 @@
                     <!-- LCP Image Optimization: Use WebP, specify dimensions, and set high fetch priority -->
                     <img src="myImage.webp" alt="Tak-min's profile picture" width="120" height="120" fetchpriority="high">
                 </div>
-                <h2>江藤 拓海</h2>
+                <h2>Takumi Eto</h2>
                 <p class="username">@tak-min</p>
                 <nav class="main-nav">
                     <ul>
-                        <li><a href="#about"><i class="fas fa-user"></i><span>自己紹介</span></a></li>
-                        <li><a href="#skills"><i class="fas fa-cogs"></i><span>スキル</span></a></li>
-                        <li><a href="#works"><i class="fas fa-project-diagram"></i><span>制作物</span></a></li>
-                        <li><a href="#contact"><i class="fas fa-envelope"></i><span>連絡先</span></a></li>
+                        <li><a href="#about"><i class="fas fa-user"></i><span>About Me</span></a></li>
+                        <li><a href="#skills"><i class="fas fa-cogs"></i><span>Skills</span></a></li>
+                        <li><a href="#works"><i class="fas fa-project-diagram"></i><span>Works</span></a></li>
+                        <li><a href="#contact"><i class="fas fa-envelope"></i><span>Contact</span></a></li>
                     </ul>
                 </nav>
                 <div class="social-links">
@@ -46,77 +46,77 @@
 
         <main class="main-content">
             <section id="about" class="content-section">
-                <h1 class="section-title">はじめまして！</h1>
+                <h1 class="section-title">Welcome!</h1>
                 <div class="card">
                     <p>
-                        初めまして、tak-minです！明石高専の都市システム工学科に通う2年生です！<br>
-                        専攻は土木工学ですが、あまり専攻分野に興味がなく、プログラミングや回路などの電気情報分野でいろいろやってます！<br>
-                        プログラミングとビジネスに強い関心があり、日々新しい技術や情報を追いかけています！<br>
-                        このサイトでは、私のスキルやこれまでに作ってきたものを紹介しています。
+                        Hi there, I'm tak-min! I'm a sophomore at Akashi College studying Civil Engineering.<br>
+                        Though my major is civil engineering, I'm more interested in programming and electronics!<br>
+                        I'm passionate about programming and business, always exploring new tech and ideas.<br>
+                        This site showcases my skills and projects.
                     </p>
-                    <p>どうぞ、ごゆっくりご覧ください！</p>
+                    <p>Feel free to look around!</p>
                 </div>
             </section>
 
             <section id="skills" class="content-section">
-                <h2 class="section-title">できること</h2>
+                <h2 class="section-title">Skills</h2>
                 <div class="card-container">
                     <div class="card skill-card">
                         <i class="fas fa-code skill-icon"></i>
-                        <h3>Web開発</h3>
-                        <p>HTML, CSS, JavaScriptを中心に、モダンなウェブサイトやアプリケーションを構築できます！</p>
+                        <h3>Web Development</h3>
+                        <p>Building modern websites and apps with HTML, CSS, and JavaScript!</p>
                     </div>
                     <div class="card skill-card">
                         <i class="fab fa-python skill-icon"></i>
                         <h3>Python</h3>
-                        <p>自動化ソフトウェアやスクレイピング、人工知能などの開発経験があります！</p>
+                        <p>Experience with automation software, web scraping, and AI development!</p>
                     </div>
                     <div class="card skill-card">
                         <i class="fa-solid fa-lightbulb skill-icon"></i>
-                        <h3>組み込み</h3>
-                        <p>マイコンや回路の知識がある程度あり、はんだ付けでいろいろなものを作ったりできます！</p>
+                        <h3>Embedded Systems</h3>
+                        <p>Working with microcontrollers and circuits, creating various projects with soldering!</p>
                     </div>
                     <div class="card skill-card">
                         <i class="fa-brands fa-bluetooth skill-icon"></i>
-                        <h3>無線通信</h3>
-                        <p>BluetoothやWifiに関する知識があり、SnifferやJammerを作ったりしています！</p>
+                        <h3>Wireless Tech</h3>
+                        <p>Knowledge of Bluetooth and WiFi, building sniffers and jammers and so on!</p>
                     </div>
                 </div>
             </section>
 
             <section id="works" class="content-section">
-                <h2 class="section-title">作ったもの</h2>
+                <h2 class="section-title">My Works</h2>
                 <div class="card-container">
                     <div class="card work-card">
                         <div class="work-image">
                             <!-- Lazy-loaded Image: Use WebP, specify dimensions, and lazy load -->
-                            <img src="work-webpage.webp" alt="制作物の画像" width="280" height="180" loading="lazy" decoding="async">
+                            <img src="work-webpage.webp" alt="Project image" width="280" height="180" loading="lazy" decoding="async">
                         </div>
-                        <h3>ポートフォリオサイト</h3>
-                        <p>このウェブサイトです。モダンな技術とデザインを意識して作成しました！</p>
-                        <a href="#" class="btn">詳しく見る</a>
+                        <h3>Portfolio Website</h3>
+                        <p>This website! Built with modern tech and clean design in mind!</p>
+                        <a href="#" class="btn">View Details</a>
                     </div>
                     <div class="card work-card">
                         <div class="work-image">
-                            <img src="IMG_8842.webp".webp" alt="制作物の画像" width="280" height="180" loading="lazy" decoding="async">
+                            <img src="IMG_8842.webp" alt="Project image" width="280" height="180" loading="lazy" decoding="async">
                         </div>
                         <h3>Bluetooth Jammer</h3>
-                        <p>Bluetoothでの接続を妨害するジャミングツールです！このほかにもWifiを妨害する機能や、Bluetoothでの通信を傍受する機能もあります！</p>
-                        <a href="" class="btn">詳しく見る</a>
+                        <p>A jamming tool that disrupts Bluetooth connections! Also features WiFi jamming and Bluetooth sniffing capabilities!</p>
+                        <a href="" class="btn">View Details</a>
                     </div>
                 </div>
             </section>
 
             <section id="contact" class="content-section">
-                <h2 class="section-title">連絡先</h2>
+                <h2 class="section-title">Get In Touch</h2>
                 <div class="card">
-                    <p>ご意見、ご感想、お仕事の依頼など、お気軽にご連絡ください。</p>
-                    <a href="mailto:taku810616@gmail.com" class="btn"><i class="fas fa-paper-plane"></i> メールを送る</a>
+                    <p>Have questions, feedback, or want to work together? Feel free to reach out!</p>
+                    <a href="mailto:taku810616@gmail.com" class="btn"><i class="fas fa-paper-plane"></i> Send an Email</a>
                 </div>
             </section>
 
             <footer>
-                <p>あなたは <span id="visitor-count">...</span> 人目の訪問者です。</p>
+                <p>You are visitor number <span id="visitor-count">...</span>!</p>
                 <p>&copy; 2025 Tak-min. All Rights Reserved.</p>
             </footer>
         </main>
